--- a/Recording_Emotibit.ipynb
+++ b/Recording_Emotibit.ipynb
@@ -8,19 +8,8 @@
    "outputs": [],
    "source": [
     "#Path to save data\n",
-    "path='/Users/laura/Documents/EMOTIBIT/Emotibit_data-script'\n",
-    "\n",
-    "Name='Laura'\n",
-    "Date='31-03-2025'"
+    "path='/Users/laura/Documents/EMOTIBIT/Emotibit_data-script'\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47a069ba-a021-492a-9b24-32e4d331b971",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
